# Omega-Generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Titles-Generator_ro_RO.ts  generate.h  generator.cpp  main.cpp  mainwindow.cpp  namegenerator.h
NameGenerator/: CMakeLists.txt  main.cpp
NameGenerator/Generator/: generate.h  generator.cpp  password.cpp  password.h
